--- a/src/app/heroes/heroe/heroe.component.html
+++ b/src/app/heroes/heroe/heroe.component.html
@@ -14,7 +14,22 @@
   <dd> {{capitalizedName}}</dd>
 </dl>
 
+<button
+  *ngIf="name !== 'Spiderman'"
+  (click)="changeHeroe()"
+  class="btn btn-primary mx-2">
+  Cambiar nombre
+</button>
 
-<button class="btn btn-primary mx-2"  (click)="changeHeroe()">Cambiar Nombre</button>
+<button
+  *ngIf="age !== 25"
+  (click)="changeAge()"
+  class="btn btn-primary">
+  Cambiar edad
+</button>
 
-<button class="btn btn-primary"  (click)="changeAge()">Cambiar edad</button>
+<button
+  (click)="resetForm()"
+  class="btn btn-primary mx-2">
+  Reset
+</button>
